--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: generic
+language: shell
 
 matrix:
     include:
@@ -14,6 +14,7 @@ matrix:
             compiler: clang
         -
             os: windows
+
             install:
             - choco install ninja
 
