Choco *and* pacman?

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ matrix:
             os: windows
 
             install:
+            - choco upgrade git.install
             - pacman -S ninja
 
 addons:
