Let's try msys2 with /noupdate, to see if it installs more quickly.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
             env:
               MSYSTEM: MINGW32
             install:
-            - choco install msys2
+            - choco install msys2 /noupdate
             - c:/tools/msys64/usr/bin/pacman -S ninja
             script:
               - c:/tools/msys64/usr/bin/make
