--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,5 +1,6 @@
 version: '{branch}.{build}'
 clone_depth: 1
+skip_tags: true
 
 environment:
   MSYSTEM: MINGW32
@@ -20,8 +21,14 @@ artifacts:
     name: fluxengine.exe
 
 deploy:
-  release: fluxengine-windows-client-v$(appveyor_build_version)
-  description: FluxEngine Windows client
+  release: FluxEngine Windows client version $(appveyor_build_version)
+  description: >
+    This is an automatically built version of the FluxEngine Windows client
+    which is generated whenever a significant checkin has happened. It's had
+    no testing whatsoever.
+
+    To use, download it, put it somewhere, and then run it from a cmd window
+    or other command line shell.
   provider: GitHub
   auth_token:
     secure: dfJjj7fWCoDUz+Ni11OcNPB/U3TNJFwNA2AsL++ChFjniUsZLlC6SDWHiL/t4FZo
